@@ -1,3 +1,6 @@
+1794.	[func]		Named and named-checkzone can now both check for
+			non-terminal wildcard records.
+
 1790.	[cleanup]	Move lib/dns/sec/dst up into lib/dns.  This should
 			allow parallel make to succeed.
 
